--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #121212;
+    background-color: #0e0e0e;
     color: #ffffff;
     text-align: center;
     margin: 0;
